--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,3 +2,23 @@
   height: 100vh;
   background-color: #242424;
 }
+
+.about-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#about img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  object-fit: contain;
+  margin-top: 5.5rem;
+}
+
+#about h3 {
+  text-align: center;
+  padding: 0 7rem;
+}
