--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -22,3 +22,9 @@
   text-align: center;
   padding: 0 7rem;
 }
+
+#card-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
