--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -100,19 +100,19 @@
     #000000
   );
   background-size: 180% 180%;
-  animation: gradient-animation 19s ease infinite;
+  animation: gradient-animation 9s ease forwards;
 }
 
 @keyframes gradient-animation {
   0% {
     background-position: 0% 50%;
   }
-  50% {
+  100% {
     background-position: 100% 50%;
   }
-  100% {
+  /* 100% {
     background-position: 0% 50%;
-  }
+  } */
 }
 
 .title-wrapper {
