--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -17,10 +17,19 @@
   object-fit: contain;
   margin-top: 5.5rem;
 }
+#about h2 {
+  font-size: 2rem;
+  color: #ffb2b2;
+  margin-bottom: 0;
+}
 
 #about h3 {
   text-align: center;
   padding: 0 7rem;
+  font-family: "Stylish", serif;
+  text-transform: none;
+  font-size: 1.7rem;
+  width: 50%;
 }
 
 #card-container {
@@ -34,8 +43,8 @@
 }
 
 #about-card {
-  width: 400px;
-  height: 400px;
+  width: 25rem;
+  height: 25rem;
 }
 
 .flip-card {
@@ -88,6 +97,17 @@
   background-color: black;
   color: #f44761;
   transform: rotateY(180deg);
+  text-align: center;
+}
+
+.flip-card-back p {
+  position: relative;
+  font-size: 1.4rem;
+  height: 80%;
+  top: 5%;
+  padding: 0.5rem 0.5rem;
+  text-transform: none;
+  font-family: "Stylish", serif;
 }
 
 /* Divider line */
