--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,7 +12,6 @@
   left: 25%;
   z-index: 1;
 }
-
 #navbar-list ul {
   display: flex;
   justify-content: space-evenly;
@@ -132,7 +131,18 @@
   font-size: 2rem;
   margin-top: 4rem;
   width: 50%;
+  animation: fadeIn 2s ease-in;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .title-wrapper img {
   width: 22rem;
   position: relative;
