--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,13 +3,14 @@
   justify-content: space-between;
   padding: 0 2.2rem;
   margin: 0 auto;
-  width: 55rem;
+  width: 60%;
   align-items: center;
   background-color: #000000;
   border-radius: 50px;
   position: fixed;
   top: 0.5rem;
-  left: 25%;
+  left: 20%;
+
   z-index: 1;
 }
 #navbar-list ul {
@@ -130,7 +131,8 @@
 .title-wrapper h3 {
   font-size: 2rem;
   margin-top: 4rem;
-  width: 50%;
+  width: 70%;
+  height: 20%;
   animation: fadeIn 2s ease-in;
 }
 
@@ -151,7 +153,7 @@
 }
 
 #intro {
-  height: 110vh;
+  height: 100vh;
 }
 
 .blink_me {
