--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,111 +1,63 @@
 #about {
   height: 110vh;
   background-color: #242424;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .about-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: start;
   flex-direction: column;
+  margin-bottom: 10rem;
+  width: 50%;
 }
 
 .about-container img {
-  width: 11rem;
-  height: 11rem;
+  width: 20rem;
+  height: 20rem;
   border-radius: 50%;
   object-fit: contain;
   margin-top: 6%;
+  position: relative;
+  left: 7rem;
 }
 #about h2 {
-  font-size: 2rem;
+  font-size: 4rem;
   color: #ffb2b2;
   margin-bottom: 0;
+  position: relative;
+  left: 7rem;
+  text-transform: capitalize;
 }
 
 #about h3 {
-  text-align: center;
-  padding: 0 7rem;
-  font-family: "Stylish", serif;
+  text-align: start;
+  position: relative;
+  left: 7rem;
+  font-family: "DotGothic16", sans-serif;
   text-transform: none;
-  font-size: 1.2rem;
-  width: 50%;
+  font-size: 1.7rem;
+  width: 80%;
 }
 
 #card-container {
   display: flex;
   align-items: center;
   justify-content: space-around;
-}
-
-#card-container img {
-  width: 30rem;
+  flex-direction: column;
+  height: 80%;
 }
 
 #about-card {
-  width: 21rem;
-  height: 21rem;
-}
-
-.flip-card {
-  background-color: transparent;
-  width: 300px;
-  height: 200px;
-  /* border: 1px solid #f1f1f1; */
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
-}
-
-/* This container is needed to position the front and back side */
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-/* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-/* Position the front and back side */
-.flip-card-front,
-.flip-card-back {
-  position: absolute;
-  left: 10%;
-  width: 80%;
-  height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
-  backface-visibility: hidden;
-  border-radius: 20px;
-}
-
-/* Style the front side (fallback if image is missing) */
-.flip-card-front {
+  width: 15rem;
+  height: 15rem;
   background-color: black;
-  color: #f44761;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2.2rem;
+  border: none;
 }
 
-/* Style the back side */
-.flip-card-back {
-  background-color: black;
-  color: #f44761;
-  transform: rotateY(180deg);
-  text-align: center;
-}
-
-.flip-card-back p {
-  position: relative;
-  font-size: 1.2rem;
-  height: 80%;
-  top: 5%;
-  padding: 0.5rem 0.5rem;
-  text-transform: none;
-  font-family: "Stylish", serif;
+#about-card img {
+  width: 8rem;
 }
