--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,19 @@
 :root {
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 800;
   font-size: 16px;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #111111;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  text-transform: uppercase;
-  font-family: "Orbitron", sans-serif;
+  text-transform: none;
+  font-family: "Poppins", sans-serif;
 }
 
 html {
@@ -39,6 +39,11 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
   background: #f44761;
   border-radius: 25px;
+}
+
+::selection {
+  color: #111111;
+  background-color: #f44761;
 }
 
 /*
