--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,6 +1,5 @@
 #about {
   height: 110vh;
-  background-color: #242424;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -45,15 +44,16 @@
 
 #card-container {
   display: flex;
-  align-items: center;
   justify-content: space-around;
   flex-direction: column;
   height: 80%;
+  width: 40%;
 }
 
 #about-card {
-  width: 15rem;
-  height: 15rem;
+  width: 16rem;
+  height: 16rem;
+  border-radius: 25px;
   background-color: black;
   border: none;
 }
