--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,7 +10,7 @@
   margin: 0 auto;
   width: 4rem;
   height: 100vh;
-  background-color: #000000;
+  background-color: #080808;
   position: fixed;
   top: 0;
   left: 0;
@@ -21,20 +21,34 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 40%;
-  width: 3rem;
+  height: 30%;
+  width: 3.5rem;
 }
 
 .navbar-buttons a {
-  font-size: 1rem;
+  font-size: 1.2rem;
+  position: relative;
+  height: 4rem;
+  width: 6rem;
+  display: flex;
+  color: #837f7f;
+  justify-content: center;
+  align-items: center;
   text-decoration: none;
-  color: whitesmoke;
-  font-weight: bold;
+  font-weight: 200;
+  margin: 0;
   transform: rotate(90deg);
 }
 
-.navbar-buttons a:hover {
-  color: #f44761;
+.navbar-button-enter {
+  background-color: #232323;
+  color: whitesmoke !important;
+  border-top: solid #f44761;
+  border-width: 0.5px;
+}
+
+.navbar-button-leave {
+  background-color: #080808;
 }
 
 .scroll {
@@ -94,7 +108,7 @@
   position: fixed;
   left: 4rem;
   backdrop-filter: blur(5px);
-  height: 4.5rem;
+  height: 3.6rem;
   z-index: 3;
 }
 
@@ -133,7 +147,7 @@
   font-family: "Poppins", sans-serif;
 }
 .title-wrapper h3 {
-  font-size: 2.6rem;
+  font-size: 2.3rem;
   margin: 0;
   width: 70%;
   height: 20%;
@@ -141,6 +155,27 @@
   text-transform: none;
   font-family: "Poppins", sans-serif;
   font-weight: 200;
+}
+
+.title-wrapper p {
+  font-weight: 200;
+  font-size: 1.3rem;
+  margin: 0;
+}
+
+.title-wrapper button {
+  text-decoration: none;
+  height: 3rem;
+  width: 9rem;
+  font-size: 1.2rem;
+  background-color: #f44761;
+  border-radius: 6px;
+  margin-top: 1rem;
+  border: none;
+}
+
+.title-wrapper button:hover {
+  background-color: #cd3c52;
 }
 
 .occupation {
@@ -185,11 +220,10 @@
 
 .gradient-background {
   background: linear-gradient(
-    310deg,
+    210deg,
     #f44761,
     #f44761,
     #a53e3e,
-    #111111,
     #111111,
     #111111,
     #111111,
