--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -7,14 +7,19 @@
 }
 
 .contact-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  height: 100%;
-  width: 40%;
-  left: 30%;
+  height: fit-content;
+  width: fit-content;
+  left: 25%;
   padding: 1rem 0 0 0;
 }
 
 .contact-container h2 {
+  width: fit-content;
   font-size: 6.3rem;
   text-align: center;
   margin: 0;
