--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -159,7 +159,8 @@
 .title-wrapper p {
   width: fit-content;
   font-weight: 200;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
+  padding-top: 0.5rem;
   margin: 0;
 }
 
@@ -195,7 +196,7 @@
 }
 
 #intro {
-  height: 90vh;
+  height: 95vh;
   display: flex;
 }
 
